[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/GUI/blue-cooldown-box.png" type="Texture" id=1]
[ext_resource path="res://Src/GUI/PlayerGUI/ReloadProgress.gd" type="Script" id=3]
[ext_resource path="res://Assets/Font/Spritecoder_Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/GUI/dice-core-shape-player1.png" type="Texture" id=6]
[ext_resource path="res://Src/GUI/DiceCoreLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/GUI/player-limiter.png" type="Texture" id=9]
[ext_resource path="res://Src/GUI/PlayerGUI/HackProgress.gd" type="Script" id=11]
[ext_resource path="res://Src/GUI/PlayerGUI/GUI.gd" type="Script" id=14]
[ext_resource path="res://Assets/GUI/limiter-frame-small.png" type="Texture" id=15]
[ext_resource path="res://Src/GUI/PlayerGUI/GUIAnimationPlayer.gd" type="Script" id=16]
[ext_resource path="res://Src/GUI/PlayerGUI/CritReloadPopup.tscn" type="PackedScene" id=17]
[ext_resource path="res://Src/GUI/PlayerGUI/PlayerDiceCoreLabel.gd" type="Script" id=18]
[ext_resource path="res://Assets/GUI/player-indexer.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=21]
script/source = "extends Label


func _ready() -> void:
	GlobalSignals.connect(\"player_indexer_changed\", self, \"change_indexer\")


func change_indexer(new_index: int) -> void:
	text = str(new_index)
"

[sub_resource type="GDScript" id=8]
script/source = "extends TextureRect


func _ready() -> void:
	GlobalSignals.connect(\"player_dice_changed\", self, \"change_dice_core\")
	GlobalSignals.connect(\"player_dice_rolled\", $DiceCoreLabel, \"_on_dice_rolled\")


func change_dice_core(resource: DiceCoreResource) -> void:
	texture = resource.dice_icon
	self_modulate = resource.color
"

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=7]
script/source = "extends Label


func _ready() -> void:
	GlobalSignals.connect(\"player_limiter_changed\", self, \"change_limiter\")


func change_limiter(new_limit: int) -> void:
	text = str(new_limit)
"

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=24]
script/source = "extends Label


func _ready() -> void:
	GlobalSignals.connect(\"player_number_generated\", self, \"_on_player_number_generated\")


func _on_player_number_generated(value: int) -> void:
	hide()
	text = str(value)

"

[sub_resource type="DynamicFont" id=26]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=22]
script/source = "extends Label


func _ready() -> void:
	GlobalSignals.connect(\"player_hack_seed_changed\", self, \"_on_player_hack_seed_changed\")


func _on_player_hack_seed_changed(hack_seed: int) -> void:
	text = str(hack_seed)
"

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DiceCoreContainer/UpperLimitRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DiceCoreContainer/LowerLimitRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GunContainer/TextureRect/GunLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GunContainer/TextureRect/GunLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=16]
resource_name = "ResultNumber"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("DiceCoreContainer/UpperLimitRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 3, 3 ),
"update": 0,
"values": [ Vector2( 104, 0 ), Vector2( 164, 0 ), Vector2( 104, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DiceCoreContainer/LowerLimitRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 3, 3 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -60, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("DiceCoreContainer/DiceCoreRect/DiceCoreLabel")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_true_seed"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GunContainer/TextureRect/GunLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 3, 3, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -208, -28 ), Vector2( -208, -28 ), Vector2( 0, -28 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GunContainer/TextureRect/GunLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="DiceCoreContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 364.0
margin_top = -104.0
margin_right = 500.0
margin_bottom = -40.0
alignment = 1

[node name="LowerLimitRect" type="TextureRect" parent="DiceCoreContainer"]
margin_right = 32.0
margin_bottom = 64.0
texture = ExtResource( 19 )
stretch_mode = 4

[node name="Label" type="Label" parent="DiceCoreContainer/LowerLimitRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -12.0
margin_right = 16.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
script = SubResource( 21 )

[node name="DiceCoreRect" type="TextureRect" parent="DiceCoreContainer"]
self_modulate = Color( 0, 0.788235, 1, 1 )
margin_left = 36.0
margin_right = 100.0
margin_bottom = 64.0
texture = ExtResource( 6 )
stretch_mode = 4
script = SubResource( 8 )

[node name="DiceCoreLabel" parent="DiceCoreContainer/DiceCoreRect" instance=ExtResource( 8 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
custom_fonts/font = SubResource( 19 )
text = "1"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="UpperLimitRect" type="TextureRect" parent="DiceCoreContainer"]
margin_left = 104.0
margin_right = 136.0
margin_bottom = 64.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="Label" type="Label" parent="DiceCoreContainer/UpperLimitRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -12.0
margin_right = 16.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "8"
align = 1
valign = 1
script = SubResource( 7 )

[node name="GunContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -100.0
margin_right = 75.0
margin_bottom = -40.0
alignment = 2

[node name="TextureRect" type="TextureRect" parent="GunContainer"]
margin_right = 150.0
margin_bottom = 24.0
texture = ExtResource( 15 )
stretch_mode = 4

[node name="GunLabel" type="Label" parent="GunContainer/TextureRect"]
margin_right = 150.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 25 )
text = "1"
align = 1
valign = 1
script = SubResource( 24 )

[node name="HBoxContainer" type="HBoxContainer" parent="GunContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 60.0
custom_constants/separation = 0

[node name="ReloadProgressLeft" type="TextureProgress" parent="GunContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 32.0
texture_progress = ExtResource( 1 )
fill_mode = 1
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="GunContainer/HBoxContainer/ReloadProgressLeft"]

[node name="ReloadProgressRight" type="TextureProgress" parent="GunContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 150.0
margin_bottom = 32.0
texture_progress = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="GunContainer/HBoxContainer/ReloadProgressRight"]

[node name="ShootLabel" type="Label" parent="."]
margin_left = 565.0
margin_top = 647.0
margin_right = 715.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 26 )
text = "SHOOT"
align = 1
valign = 1

[node name="HackContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -100.0
margin_right = -350.0
margin_bottom = -40.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HackContainer"]
margin_right = 150.0
margin_bottom = 24.0
texture = ExtResource( 15 )
stretch_mode = 4

[node name="HackLabel" type="Label" parent="HackContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 23 )
text = "1"
align = 1
valign = 1
script = SubResource( 22 )

[node name="HBoxContainer" type="HBoxContainer" parent="HackContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 60.0
custom_constants/separation = 0

[node name="HackProgress" type="TextureProgress" parent="HackContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 32.0
texture_progress = ExtResource( 1 )
fill_mode = 1
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="HackContainer/HBoxContainer/HackProgress"]

[node name="HackProgress2" type="TextureProgress" parent="HackContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 150.0
margin_bottom = 32.0
texture_progress = ExtResource( 1 )
script = ExtResource( 11 )

[node name="Tween" type="Tween" parent="HackContainer/HBoxContainer/HackProgress2"]

[node name="HackLabel" type="Label" parent="."]
margin_left = 780.0
margin_top = 647.0
margin_right = 930.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 26 )
text = "HACK"
align = 1
valign = 1

[node name="CritReloadPopup" parent="." instance=ExtResource( 17 )]
visible = false
margin_left = 568.0
margin_top = 524.0
margin_right = 948.0
margin_bottom = 572.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/ResultNumber = SubResource( 16 )
script = ExtResource( 16 )

[connection signal="random_finished" from="DiceCoreContainer/DiceCoreRect/DiceCoreLabel" to="AnimationPlayer" method="_on_DiceCoreLabel_random_finished"]
